--- a/client/src/index.css
+++ b/client/src/index.css
@@ -135,3 +135,7 @@ body {
   @apply font-sans;
   font-family: "Poppins", ui-sans-serif, system-ui, sans-serif;
 }
+
+.theme-text-gradient {
+  @apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary hover:from-secondary hover:to-primary;
+}
