--- a/client/src/index.css
+++ b/client/src/index.css
@@ -137,5 +137,5 @@ body {
 }
 
 .theme-text-gradient {
-  @apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary hover:from-secondary hover:to-primary;
+  @apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary;
 }
