--- a/client/src/index.css
+++ b/client/src/index.css
@@ -139,3 +139,16 @@ body {
 .theme-text-gradient {
   @apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.no-scrollbar {
+  scrollbar-width: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+}
