--- a/client/src/index.css
+++ b/client/src/index.css
@@ -173,3 +173,10 @@ body {
   @apply text-sm;
 }
 
+.cover {
+  background-image: url("./assets/ws-bg.png");
+  background-size: cover;
+  background-position: top left;
+  background-repeat: no-repeat;
+}
+
