--- a/client/src/index.css
+++ b/client/src/index.css
@@ -187,3 +187,12 @@ body {
   background-position: top left;
   background-repeat: no-repeat;
 }
+
+.custom-ellipsis {
+  height: 40px;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
+}
