--- a/client/src/index.css
+++ b/client/src/index.css
@@ -138,7 +138,7 @@
   svg,
   body,
   button:not(#sign-out) {
-    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
   }
 }
 
