--- a/client/src/index.css
+++ b/client/src/index.css
@@ -198,3 +198,9 @@ body {
   overflow: hidden;
   display: -webkit-box;
 }
+
+.agora_video_player {
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: contain !important;
+}
