--- a/client/src/index.css
+++ b/client/src/index.css
@@ -247,3 +247,42 @@ body {
     transform: scale(1.1);
   }
 }
+
+.dots {
+  display: flex;
+  gap: 2px;
+}
+
+.dots span {
+  visibility: hidden;
+  animation: showHide 2s infinite;
+  transform: translateY(-3px);
+}
+
+.dots span:nth-child(1) {
+  animation-delay: 0s;
+}
+.dots span:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.dots span:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+@keyframes showHide {
+  0% {
+    visibility: hidden;
+    width: 0;
+    margin-right: 0;
+  }
+  10%, 60% {
+    visibility: visible;
+    margin-right: 6px;
+  }
+  90%, 100% {
+    visibility: hidden;
+    width: 0;
+    margin-right: 0;
+  }
+}
+
