--- a/client/src/index.css
+++ b/client/src/index.css
@@ -173,7 +173,6 @@ body {
   -ms-overflow-style: none;
 }
 
-
 /* for text display gotten from tiptap */
 .text-display h1 {
   @apply text-2xl font-bold;
@@ -248,41 +247,15 @@ body {
   }
 }
 
-.dots {
-  display: flex;
-  gap: 2px;
+.loading-bar {
+  animation: width 3s infinite ease-in-out;
 }
 
-.dots span {
-  visibility: hidden;
-  animation: showHide 2s infinite;
-  transform: translateY(-3px);
-}
-
-.dots span:nth-child(1) {
-  animation-delay: 0s;
-}
-.dots span:nth-child(2) {
-  animation-delay: 0.3s;
-}
-.dots span:nth-child(3) {
-  animation-delay: 0.6s;
-}
-
-@keyframes showHide {
+@keyframes width {
   0% {
-    visibility: hidden;
-    width: 0;
-    margin-right: 0;
+    width: 0%;
   }
-  10%, 60% {
-    visibility: visible;
-    margin-right: 6px;
-  }
-  90%, 100% {
-    visibility: hidden;
-    width: 0;
-    margin-right: 0;
+  100% {
+    width: 100%;
   }
 }
-
