--- a/client/src/index.css
+++ b/client/src/index.css
@@ -142,7 +142,7 @@
 
 }
 
-div,
+div:not(.chat-ui-element), /* exclude these elements so transition doesnt affect them */
 p,
 a,
 svg,
@@ -160,6 +160,10 @@ body {
 .theme-text-gradient {
   @apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary;
 }
+
+/* .chat-ui-element {
+  @apply transition-transform duration-300 ease-in-out;
+} */
 
 .no-scrollbar::-webkit-scrollbar {
   width: 0;
